// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectorButton /> UI snapshots when Icon added 1`] = `
.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7:focus .emotion-4 {
  box-shadow: 0 0 2px 2px rgba(166,161,226,0.5);
  border-radius: 4px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 2px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  width: 2rem;
  border-radius: 4px;
  background-color: transparent;
  border-color: #332e54;
}

.emotion-1:active,
.emotion-1:focus {
  outline: none;
}

.emotion-0 {
  cursor: pointer;
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
  className="emotion-7 emotion-8"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex="0"
>
  <div
    className="emotion-3 emotion-4"
  >
    <<svg viewBox="0 0 45 45" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title>Few</title>
  <path fill-rule="evenodd" fill="currentColor" d="M4.21306069,2.9995052 C4.21306069,3.66947056 3.66985488,4.21276596 2.99901055,4.21276596 C2.33014512,4.21276596 1.78693931,3.66947056 1.78693931,2.9995052 C1.78693931,2.32953983 2.33014512,1.78624443 2.99901055,1.78624443 C3.66985488,1.78624443 4.21306069,2.32953983 4.21306069,2.9995052 M0,2.9995052 C0,4.65710045 1.34366755,6 2.99901055,6 C4.65633245,6 6,4.65710045 6,2.9995052 C6,1.34289955 4.65633245,0 2.99901055,0 C1.34366755,0 0,1.34289955 0,2.9995052" transform="translate(20 20)"/>
</svg>

      className="emotion-0"
      height={16}
      width={16}
    />
    <div
      checked={false}
      className="emotion-1 emotion-2"
      type="primary"
    />
  </div>
  <p
    className="emotion-5 emotion-6"
  >
    SelectorButton Text
  </p>
</div>
`;

exports[`<SelectorButton /> UI snapshots when checked type is primary 1`] = `
.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7:focus .emotion-4 {
  box-shadow: 0 0 2px 2px rgba(166,161,226,0.5);
  border-radius: 100%;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

.emotion-0 {
  cursor: pointer;
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  color: #ffffff;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 2px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  width: 2rem;
  border-radius: 100%;
  background-color: #332e54;
  border-color: #332e54;
}

.emotion-1:active,
.emotion-1:focus {
  outline: none;
}

<div
  className="emotion-7 emotion-8"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex="0"
>
  <div
    className="emotion-3 emotion-4"
  >
    <svg
      className="emotion-0"
      height={11}
      width={11}
    />
    <div
      checked={true}
      className="emotion-1 emotion-2"
      type="primary"
    />
  </div>
  <p
    className="emotion-5 emotion-6"
  >
    SelectorButton Text
  </p>
</div>
`;

exports[`<SelectorButton /> UI snapshots when checked type is secondary 1`] = `
.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7:focus .emotion-4 {
  box-shadow: 0 0 2px 2px rgba(166,161,226,0.5);
  border-radius: 100%;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

.emotion-0 {
  cursor: pointer;
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  color: #ffffff;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 2px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  width: 2rem;
  border-radius: 100%;
  background-color: #a6a1e2;
  border-color: #a6a1e2;
}

.emotion-1:active,
.emotion-1:focus {
  outline: none;
}

<div
  className="emotion-7 emotion-8"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex="0"
>
  <div
    className="emotion-3 emotion-4"
  >
    <svg
      className="emotion-0"
      height={11}
      width={11}
    />
    <div
      checked={true}
      className="emotion-1 emotion-2"
      type="secondary"
    />
  </div>
  <p
    className="emotion-5 emotion-6"
  >
    SelectorButton Text
  </p>
</div>
`;

exports[`<SelectorButton /> UI snapshots when children is a node 1`] = `
.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7:focus .emotion-4 {
  box-shadow: 0 0 2px 2px rgba(166,161,226,0.5);
  border-radius: 100%;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-0 {
  cursor: pointer;
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  color: transparent;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 2px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  width: 2rem;
  border-radius: 100%;
  background-color: transparent;
  border-color: #332e54;
}

.emotion-1:active,
.emotion-1:focus {
  outline: none;
}

.emotion-5 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

<div
  className="emotion-7 emotion-8"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex="0"
>
  <div
    className="emotion-3 emotion-4"
  >
    <svg
      className="emotion-0"
      height={11}
      width={11}
    />
    <div
      checked={false}
      className="emotion-1 emotion-2"
      type="primary"
    />
  </div>
  <p
    className="emotion-5 emotion-6"
  >
    SelectorButton Text
  </p>
</div>
`;

exports[`<SelectorButton /> UI snapshots when children is undefined 1`] = `
.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5:focus .emotion-4 {
  box-shadow: 0 0 2px 2px rgba(166,161,226,0.5);
  border-radius: 100%;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-0 {
  cursor: pointer;
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  color: transparent;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 2px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  width: 2rem;
  border-radius: 100%;
  background-color: transparent;
  border-color: #332e54;
}

.emotion-1:active,
.emotion-1:focus {
  outline: none;
}

<div
  className="emotion-5 emotion-6"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex="0"
>
  <div
    className="emotion-3 emotion-4"
  >
    <svg
      className="emotion-0"
      height={11}
      width={11}
    />
    <div
      checked={false}
      className="emotion-1 emotion-2"
      type="primary"
    />
  </div>
</div>
`;

exports[`<SelectorButton /> UI snapshots when is checkbox 1`] = `
.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-0 {
  cursor: pointer;
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  color: transparent;
}

.emotion-5 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7:focus .emotion-4 {
  box-shadow: 0 0 2px 2px rgba(166,161,226,0.5);
  border-radius: 4px;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 2px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  width: 2rem;
  border-radius: 4px;
  background-color: transparent;
  border-color: #332e54;
}

.emotion-1:active,
.emotion-1:focus {
  outline: none;
}

<div
  className="emotion-7 emotion-8"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex="0"
>
  <div
    className="emotion-3 emotion-4"
  >
    <svg
      className="emotion-0"
      height={11}
      width={11}
    />
    <div
      checked={false}
      className="emotion-1 emotion-2"
      type="primary"
    />
  </div>
  <p
    className="emotion-5 emotion-6"
  >
    SelectorButton Text
  </p>
</div>
`;
